--- a/wiki/How_do_I_report_a_technical_error_for_Navi_X.wiki
+++ b/wiki/How_do_I_report_a_technical_error_for_Navi_X.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
 Issue: How do I report a technical error for Navi-X?
 
-Explanation: You may go to http://navix.turner3d.net and either use the Shoutbox by leaving a message, then coming back later to check for a response or you can use our forums and open a new thread and let us know what you need help with.
+Explanation: You may go to http://www.navixtreme.com and either use the Shoutbox by leaving a message, then coming back later to check for a response or you can use our forums and open a new thread and let us know what you need help with.
 
 When reporting a technical eror, please include the following information in your communication:
 
