--- a/wiki/What_is_a_Processor.wiki
+++ b/wiki/What_is_a_Processor.wiki
@@ -18,6 +18,6 @@ Please note that this is not meant to serve as a tutorial for any of the above s
 
 NIPL came into existence with Navi-X r3.1 and is a major improvement in both speed and flexibility over the previous processing system. While the previous system is still supported and its documentation is still online, authoring new processors in NIPL is highly recommended.
 
-If you would like NIPL API documentation, you can go here for more details: http://navix.turner3d.net/proc_docs/ 
+If you would like NIPL API documentation, you can go here for more details: http://www.navixtreme.com/proc_docs/ 
 
 ***To read the above URL's information, you have to have a free Navi-Xtreme account to access the link above.
