Edited wiki page Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform through web user interface.

--- a/wiki/Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform.wiki
+++ b/wiki/Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform.wiki
@@ -10,3 +10,6 @@ Navi-X on Boxee does not.
 
 Navi-X on XBMC supports RTMP and MMS Live Streams...
 Navi-X on Boxee does not.
+
+Navi-X on XBMC or Boxee supports Navi-X "processors"...
+Navi-X on WiiMC does not.
