Edited wiki page Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform through web user interface.

--- a/wiki/Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform.wiki
+++ b/wiki/Why_is_a_feature_or_function_for_Navi_X_on_one_platform_not_on_another_platform.wiki
@@ -5,6 +5,11 @@ Explanation: Not all platforms are created the same. Even slight differences can
 
 ***Notes:
 
+Not all menus in Navi-X are accessible on another platform.
+
+Boxee has a built in web browser than can be utilized with Navi-X links...
+Navi-X on XBMC does not.
+
 Navi-X on XBMC has a download feature...
 Navi-X on Boxee does not.
 
@@ -13,3 +18,9 @@ Navi-X on Boxee does not.
 
 Navi-X on XBMC or Boxee supports Navi-X "processors"...
 Navi-X on WiiMC does not.
+
+This means any links that are not DIRECTLY linking to a file on the internet will not work. (example: http://www.whateversite.com/vids/blahblah/nameofthemovie.mkv... or .avi, .mp4... so if you do not see a file extension on the end of the link, the link will not work in WiiMC.
+
+This is due to the lack of a python interpreter in WiiMC. Porting the processors to C+ would make them work, but no programmer has stepped up to take on the task in 2 years of searching.
+
+Playstation support via Channel Plugin for Playstation Media Server and Showtime also have similar limitations and are not as aggresively developed as XBMC and Boxee ports. 
