--- a/wiki/How_do_I_add_Live_Streams_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_Live_Streams_to_a_playlist.wiki
@@ -1,13 +1,13 @@
-Issue: How do I add Live Streams to a playlist?
+*Issue:* How do I add Live Streams to a playlist?
 
-Explanation:
+*Explanation:*
 This instructional guide is meant to serve as a general informational guide to successfully adding live streams from the internet to Navi-X… it is not meant to serve as a fully instructional guide for telling you about each and every individual detail regarding expectations of data sniffing… unexpected things happen all the time when “sniffing” out live stream links and you are expected to have a good understanding or interpretation of how your browser works from a processing standpoint, what it is you are seeing on screen when using data sniffing tools and what it all means, as well as how to search for and find video playback variables needed for Navi-X to emulate a java-based video player. It is advised you become familiar with data sniffing, what it is, how to do it and what it is you are reading from a “data sniff”. There are plenty of articles on Google to instruct you on how to perform these “sniffs”… please read additional materials if you have troubles understanding any part of this guide. You would search for terms like this on Google… data sniffing, how to get links using wireshark, how to get video links, url snooper. Two articles have also been written in addition to this document explaining how to go about this... 
 
 http://code.google.com/p/navi-x/wiki/How_do_I_add_MMS_live_streams_to_a_playlist
 
 http://code.google.com/p/navi-x/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist
 
-What you need to have to installed on your computer to perform this task:
+*What you need to have to installed on your computer to perform this task:*
 1. A web browser. Any browser will do.
 2. A data sniffing program. Currently, WireShark is the suggested program of choice as it works very well at getting all variables for RTMP and RTMPe playback. 
 3. A working internet connection.
@@ -15,7 +15,7 @@ What you need to have to installed on your computer to perform this task:
 
 For those who don’t know, RTMP is Real Time Messaging Protocol (RTMP) and is a proprietary protocol developed by Adobe for streaming audio, video and data over the Internet, between a Flash player and a server. There are different types of streams on the internet as well like MMS streams and other proprietary streams on the internet that will work in XBMC or Boxee, but you will want to check the supported codec formats for each media center to confirm it will work for you. Primarily, the two most common types of live streams there are are RTMP and MMS streams. Getting working links out for both of these types is done differently.
 
-How to get links for RTMP streams
+*How to get links for RTMP streams:*
 The RTMP protocol has multiple variations:
 1. The "plain" RTMP protocol which works on top of TCP and uses port number 1935 by default.
 2. RTMPS which is RTMP over a secure SSL connection using HTTPS.
@@ -25,13 +25,13 @@ corporate traffic filtering. The encapsulated session may carry plain RTMP, RTMP
 
 If you would like more information on RTMP and how it works, check out this link. http://en.wikipedia.org/wiki/Real_Time_Messaging_Protocol
 
-So here is a run down of how a data sniffing program works… typically, you install and open the program and search for a “Start” button or something similar to that function. The “Start” button begins the sniffing of your ethernet ports data traffic for http header and body data… particularly URLs or links to external resources on the internet like pictures, video files and rtmp streams. As each resource is requested through your web browser by a website for example like Adult Swim, the links are picked up on the data sniffing program for all types of media and aggregated to a list within the data sniffing program. When an RTMP stream is loaded, this will be indicated in the list of links with rtmp:// or rtmpe:// at the very front of the link. You can generally just browse up and down the list and check for these pre-fixes to the links. These are the stream links you are looking for.
+*So here is a run down of how a data sniffing program works…* typically, you install and open the program and search for a “Start” button or something similar to that function. The “Start” button begins the sniffing of your ethernet ports data traffic for http header and body data… particularly URLs or links to external resources on the internet like pictures, video files and rtmp streams. As each resource is requested through your web browser by a website for example like Adult Swim, the links are picked up on the data sniffing program for all types of media and aggregated to a list within the data sniffing program. When an RTMP stream is loaded, this will be indicated in the list of links with rtmp:// or rtmpe:// at the very front of the link. You can generally just browse up and down the list and check for these pre-fixes to the links. These are the stream links you are looking for.
 In addition to getting the actual streaming link for the source, you need to establish a handshake between the server and your device in order for the stream to become active and working for your device… this is where the RTMP variables come into play.
 
 There are numerous different RTMP variables for video playback. These are normally handled by the java-based media player on a website and they automatically establish the handshake to enable the stream to your ip address for you when you click on the link from the broadcaster’s website. The problem is live stream broadcasters usually are very particular about controlling who and how you get to their video streams because it costs money to stream live streams. Using RTMP prevents people from just grabbing the link and their bandwidth usage from going out of control by controlling who has the “keys” to access it. These are the RTMP parameters.
 
 Here is an old example of a Navi-X playlist entry for an RTMP live stream:
-
+{{{
 type=video 
 name=BBC News 
 URL=http://livestation.com/bbcnews 
@@ -39,14 +39,15 @@ playpath=bbcnews_en_high.sdp
 swfUrl=http://www.livestation.com/flash/player/5.4/player.swf 
 swfVfy=true 
 live=true
-
+}}}
 
 In this case, the RTMP parameters are as follows…
+{{{
 playpath=bbcnews_en_high.sdp 
 swfUrl=http://www.livestation.com/flash/player/5.4/player.swf 
 swfVfy=true 
 live=true
-
+}}}
 
 Here is how I got the RTMP parameters for this live stream…
 1. Open the data sniffing program and hit “Start” to start sniffing my Ethernet ports.
