Edited wiki page How_do_I_add_Live_Streams_to_a_playlist through web user interface.

--- a/wiki/How_do_I_add_Live_Streams_to_a_playlist.wiki
+++ b/wiki/How_do_I_add_Live_Streams_to_a_playlist.wiki
@@ -25,12 +25,12 @@ corporate traffic filtering. The encapsulated session may carry plain RTMP, RTMP
 
 If you would like more information on RTMP and how it works, check out this link. http://en.wikipedia.org/wiki/Real_Time_Messaging_Protocol
 
-*So here is a run down of how a data sniffing program works…* typically, you install and open the program and search for a “Start” button or something similar to that function. The “Start” button begins the sniffing of your ethernet ports data traffic for http header and body data… particularly URLs or links to external resources on the internet like pictures, video files and rtmp streams. As each resource is requested through your web browser by a website for example like Adult Swim, the links are picked up on the data sniffing program for all types of media and aggregated to a list within the data sniffing program. When an RTMP stream is loaded, this will be indicated in the list of links with rtmp:// or rtmpe:// at the very front of the link. You can generally just browse up and down the list and check for these pre-fixes to the links. These are the stream links you are looking for.
+*So here is a run down of how a data sniffing program works:* typically, you install and open the program and search for a “Start” button or something similar to that function. The “Start” button begins the sniffing of your ethernet ports data traffic for http header and body data… particularly URLs or links to external resources on the internet like pictures, video files and rtmp streams. As each resource is requested through your web browser by a website for example like Adult Swim, the links are picked up on the data sniffing program for all types of media and aggregated to a list within the data sniffing program. When an RTMP stream is loaded, this will be indicated in the list of links with rtmp:// or rtmpe:// at the very front of the link. You can generally just browse up and down the list and check for these pre-fixes to the links. These are the stream links you are looking for.
 In addition to getting the actual streaming link for the source, you need to establish a handshake between the server and your device in order for the stream to become active and working for your device… this is where the RTMP variables come into play.
 
 There are numerous different RTMP variables for video playback. These are normally handled by the java-based media player on a website and they automatically establish the handshake to enable the stream to your ip address for you when you click on the link from the broadcaster’s website. The problem is live stream broadcasters usually are very particular about controlling who and how you get to their video streams because it costs money to stream live streams. Using RTMP prevents people from just grabbing the link and their bandwidth usage from going out of control by controlling who has the “keys” to access it. These are the RTMP parameters.
 
-Here is an old example of a Navi-X playlist entry for an RTMP live stream:
+*Here is an old example of a Navi-X playlist entry for an RTMP live stream:*
 {{{
 type=video 
 name=BBC News 
@@ -41,7 +41,7 @@ swfVfy=true
 live=true
 }}}
 
-In this case, the RTMP parameters are as follows…
+*In this case, the RTMP parameters are as follows:*
 {{{
 playpath=bbcnews_en_high.sdp 
 swfUrl=http://www.livestation.com/flash/player/5.4/player.swf 
@@ -49,8 +49,8 @@ swfVfy=true
 live=true
 }}}
 
-*Here is how I got the RTMP parameters for this live stream…*
-1. Open the data sniffing program and hit “Start” to start sniffing my Ethernet ports.
+*Here is how I got the RTMP parameters for this live stream:*
+1. Open the data sniffing program and hit “Start” to start sniffing ethernet ports.
 2. Opened a web browser and went to livestation.com
 3. Browsed to the news section > BBC Live and opened the webpage to begin the live stream.
 4. Wireshark intercepts the data coming in from the live stream and shows the GET/POST header of the file accessed via the page request caused when you click on a link to a live stream.
@@ -61,7 +61,7 @@ live=true
 
 ----
 
-*How to get links for MMS streams*
+*How to get links for MMS streams:*
 For those who don’t know, Microsoft Media Server (MMS) is the name of Microsoft's proprietary network streaming protocol used to transfer unicast data in Windows Media Services (previously called NetShow Services). MMS can be transported via UDP or TCP/IP. The MMS default port is UDP/TCP 1755.
 
 MMS streams are a toss up… sometimes they require authentication tokens for content delivery, sometimes just adding the link directly to the MMS link is enough to get the stream to work… you typically won’t know until you sniff for the link to find out what type of output your website being sniffed is producing.
@@ -73,7 +73,7 @@ However, most other websites use security authentication directly in the body of
 
 These types of links would require a “processor” or web script for resolving URL’s accordingly. The tokens are generated using a webscript from their servers… if you can successfully decompile the java-based media player on their website after locating it and get the algorithm they are using to generate tokens, you can then write a processor of your own to generate the tokens for you on the fly using scrapers and processors in Navi-X. Information on this can be found elsewhere on Navi-Xtreme or the wiki section. We do not provide information on how to decompile java-based media players here… you would have to read up on this yourself and have a decent understanding of how to write and calculate regular expressions for java. This information is also not being discussed here… you will need to look it up on Google or elsewhere to figure that out.
 
-***Article Notes:
+*Article Notes:*
 
 1. The reason many things are not being discussed here is because there are numerous articles elsewhere on the subjects discussed and we do not intend on re-writing a comprehensive tutorial on decompiling java players or writing regular expressions… use a search engine to learn how to do this stuff.
 2. This article is written for advanced computer users only. If you are a general user, without a lot of reading and learning, you will pretty much never get live streams added correctly in Navi-X… that’s just the way it is. You need to have a lot of self ambition to understand how this stuff works and we are not going to spoon feed it to you… it is a very in depth and complicated endeavor to understand and will require you to do a lot of self learning in order to add live streams if you are not familiar with how to do so.
