--- a/wiki/Background_Information_on_Navi_X.wiki
+++ b/wiki/Background_Information_on_Navi_X.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: Background Information on Navi-X
+*Issue:* Background Information on Navi-X
 
-Explanation: Navi-X was originally developed by Rodejo, a script writer of python code from the Netherlands. Navi-X was originally created for XBMC for the Xbox on April 1st, 2007. Navi-X originally only played back media items of video and audio content and was eventually expanded to included many other media types like text, rss, live streams and podcasts. There are currently a total of 1 developers, 1 technical support lead and project coordinator, and a handful of people who contribute their priceless time to the project with various endeavors.
+*Explanation:* Navi-X was originally developed by Rodejo, a script writer of python code from the Netherlands. Navi-X was originally created for XBMC for the Xbox on April 1st, 2007. Navi-X originally only played back media items of video and audio content and was eventually expanded to included many other media types like text, rss, live streams and podcasts. There are currently a total of 1 developers, 1 technical support lead and project coordinator, and a handful of people who contribute their priceless time to the project with various endeavors.
 
 Believe it or not, there used to be a time where Navi-X didn't even have tv shows, movies, music or many websites now available in it today. When Navi-X started, there was pretty much only assorted public domain content available via podcasts and direct links only.
 
