--- a/wiki/Does_Navi_X_have_a_manual.wiki
+++ b/wiki/Does_Navi_X_have_a_manual.wiki
@@ -1,4 +1,4 @@
-Issue:*  Does Navi-X have a manual?
+*Issue:*  Does Navi-X have a manual?
 
 *Explanation:*  A manual was once created, but is no longer maintained as this Wiki now serves that purpose. However, if you would like to read it for reference or the manual playlist creation notes, here it is:
 
