--- a/wiki/How_can_I_contact_Team_Navi_X.wiki
+++ b/wiki/How_can_I_contact_Team_Navi_X.wiki
@@ -1,4 +1,4 @@
 #labels Phase-Support
-Issue: How can I contact Team Navi-X?
+*Issue:* How can I contact Team Navi-X?
 
-Explanation: http://website.navi-x.org/contacts.html
+*Explanation:* http://website.navi-x.org/contacts.html
