--- a/wiki/How_do_I_perform_a_factory_reset_on_my_boxee_box.wiki
+++ b/wiki/How_do_I_perform_a_factory_reset_on_my_boxee_box.wiki
@@ -1,11 +1,10 @@
 #labels Phase-Support
-Issue: How do I perform a factory reset on my boxee box?
-________________________________________________________________________
+*Issue:* How do I perform a factory reset on my boxee box?
 
-Explanation:
+*Explanation:*
 Sometimes, the update for firmware on a Boxee Box does flash your device properly during an update over the internet directly. The symptoms typically include primary features not working in Boxee or Navi-X. If you feel your device should be completing a task that appears to be failing or not working, you should consider factory restoring your boxee box and manually updating your firmware from a flash drive. Instructions to manually update from a flash drive will be included in a separate article via search.
 
-To Fix This Issue:
+*To Fix This Issue:*
 1. Turn off the Boxee Box with the power switch on the top of the box. 
 2. Press and hold the power button for more than 5 but less than 8 seconds. 
 3. The Boxee Box will restart with gray screen and take a longer time to load. 
