--- a/wiki/How_do_I_report_a_technical_error_for_Navi_X.wiki
+++ b/wiki/How_do_I_report_a_technical_error_for_Navi_X.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: How do I report a technical error for Navi-X?
+*Issue:* How do I report a technical error for Navi-X?
 
-Explanation: You may go to http://www.navixtreme.com and either use the Shoutbox by leaving a message, then coming back later to check for a response or you can use our forums and open a new thread and let us know what you need help with.
+*Explanation:* You may go to http://www.navixtreme.com and either use the Shoutbox by leaving a message, then coming back later to check for a response or you can use our forums and open a new thread and let us know what you need help with.
 
 When reporting a technical eror, please include the following information in your communication:
 
@@ -10,4 +10,4 @@ When reporting a technical eror, please include the following information in you
 3. What operating system are you running Navi-X on?
 4. A detailed description of what your concern or technical trouble is, as well as where you can find it in Navi-X. (example: In Navi-X > Navi-X Networks > Music > MTV Music Videos.)
 
-***Please make sure you offer as many details about the issue as possible. Giving us a short and incomplete answer is unacceptable and will delay your technical resolution time.
+*Please make sure you offer as many details about the issue as possible. Giving us a short and incomplete answer is unacceptable and will delay your technical resolution time.*
