--- a/wiki/How_do_I_use_XBMC_or_Boxee.wiki
+++ b/wiki/How_do_I_use_XBMC_or_Boxee.wiki
@@ -1,12 +1,12 @@
 #labels Phase-Support
-Issue: How do I use XBMC or Boxee?
+*Issue:* How do I use XBMC or Boxee?
 
-Explanation: Please reach out to staff at XBMC or Boxee forums for details. We only support Navi-X functions.
+*Explanation:* Please reach out to staff at XBMC or Boxee forums for details. We only support Navi-X functions.
 
-XBMC Support
+*XBMC Support*
 
 http://xbmc.org/support/  also...  http://forum.xbmc.org/
 
-Boxee Support
+*Boxee Support*
 
 http://support.boxee.tv/home   also...  http://forums.boxee.tv
