--- a/wiki/Is_there_a_programmable_API_for_Navi_X.wiki
+++ b/wiki/Is_there_a_programmable_API_for_Navi_X.wiki
@@ -1,9 +1,9 @@
 #labels Phase-Support
-Issue: Is there a programmable API for Navi-X?
+*Issue:* Is there a programmable API for Navi-X?
 
-Explanation: Yes there is. Details about the Navi-X API dubbed Navi-X Instructional Processor Language or NIPL for short can be found here: 
+*Explanation:* Yes there is. Details about the Navi-X API dubbed Navi-X Instructional Processor Language or NIPL for short can be found here: 
 http://www.navixtreme.com/proc_docs/
 
 Turner3D can provide guidance on http://www.navixtreme.com for advanced users.
 
-***ONLY THOSE FAMILIAR WITH PROGRAMMING IN "WEB LANGUAGES" SHOULD ATTEMPT TO TO BUILD A SCRAPER OR PROCESSOR. THERE IS NO TUTORIAL FOR HOW TO CODE IN A WEB LANGUAGE. GOOGLE SEARCH PHP, PERL OR ASP TO LEARN MORE ABOUT WEB LANGUAGES.
+*ONLY THOSE FAMILIAR WITH PROGRAMMING IN "WEB LANGUAGES" SHOULD ATTEMPT TO TO BUILD A SCRAPER OR PROCESSOR. THERE IS NO TUTORIAL FOR HOW TO CODE IN A WEB LANGUAGE. GOOGLE SEARCH PHP, PERL OR ASP TO LEARN MORE ABOUT WEB LANGUAGES.*
