Edited wiki page Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X through web user interface.

--- a/wiki/Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X.wiki
+++ b/wiki/Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: Troubleshooting Guide for Buffering Issues in Navi-X.
+*Issue:* Troubleshooting Guide for Buffering Issues in Navi-X.
 
-Explanation: After massive amounts of complaints to me about “Why is this link buffering so much?!”, and a special request for a detailed explanation and resolution to these issues, I will attempt to layout a general troubleshooting and testing guide to help everyone determine what is causing their own personal buffering nightmares, should you have any. I will also try to keep it as short and to the point as possible and only include technically applicable information and nothing speculative. Remember that this is a general guide that is applicable to all buffering issues and not just for one person… so don’t snap at me if I don’t fix your issue.
+*Explanation:* After massive amounts of complaints to me about “Why is this link buffering so much?!”, and a special request for a detailed explanation and resolution to these issues, I will attempt to layout a general troubleshooting and testing guide to help everyone determine what is causing their own personal buffering nightmares, should you have any. I will also try to keep it as short and to the point as possible and only include technically applicable information and nothing speculative. Remember that this is a general guide that is applicable to all buffering issues and not just for one person… so don’t snap at me if I don’t fix your issue.
 
 General Synopsis of Buffering and Bandwidth history in general…
 
@@ -11,11 +11,11 @@ With a general understanding of buffering and its history in mind, I will now ou
 
 Things To Be Aware Of That Can Affect Your Internet Connection:
 
-1. Using a wired connection is better than using a wireless connection when streaming from the internet. This does not mean you cannot use your wireless setup successfully, but the likelihood of you losing bits during a file transfer is substantially increased when you are transmitting to devices wirelessly. With this said, I only use wireless on my Boxee Box and do not experience the problems others face most of the time.
+*1.* Using a wired connection is better than using a wireless connection when streaming from the internet. This does not mean you cannot use your wireless setup successfully, but the likelihood of you losing bits during a file transfer is substantially increased when you are transmitting to devices wirelessly. With this said, I only use wireless on my Boxee Box and do not experience the problems others face most of the time.
 
-2. Electronic interference is a regular occurrence happening everywhere. When interference occurs, wireless radio communication is usually the first thing to become hindered or broken, mostly intermittently but sometimes consistently because of this interference. Many things can interfere with connectivity including power shortages, mercury lamps, EMP from these shortages or devices, cell phones near other wireless devices, multiple wireless devices placed next to each other, old electronics, or even physical layout and makeup of your location where the wireless setup is installed. Another big no-no typically people like to do is put the wireless router RIGHT NEXT to their Boxee Box or wireless devices, thinking this will help when in fact wireless really needs about 4 to 5 yards away from the wireless device to operate properly. Some folks also think they can stream without problems by putting their devices too far away from their router and yet they think it still reaches without issue so it cannot be a problem with distance. If you are using a wired connection and have connection issues, it could also be that your wire is longer than 20 feet and has collected static electricity from the carpet it is lying on, causing intermittent connectivity as well. Spraying your cords with “Static Guard” will remove any static on your lines and prevent it from collecting as often. I live where it is very dry and static electricity messes with my Ethernet cable EVERYTIME I vacuum and I have to move the cord and sometimes spray it afterwards due to intermittent connectivity.
+*2.* Electronic interference is a regular occurrence happening everywhere. When interference occurs, wireless radio communication is usually the first thing to become hindered or broken, mostly intermittently but sometimes consistently because of this interference. Many things can interfere with connectivity including power shortages, mercury lamps, EMP from these shortages or devices, cell phones near other wireless devices, multiple wireless devices placed next to each other, old electronics, or even physical layout and makeup of your location where the wireless setup is installed. Another big no-no typically people like to do is put the wireless router RIGHT NEXT to their Boxee Box or wireless devices, thinking this will help when in fact wireless really needs about 4 to 5 yards away from the wireless device to operate properly. Some folks also think they can stream without problems by putting their devices too far away from their router and yet they think it still reaches without issue so it cannot be a problem with distance. If you are using a wired connection and have connection issues, it could also be that your wire is longer than 20 feet and has collected static electricity from the carpet it is lying on, causing intermittent connectivity as well. Spraying your cords with “Static Guard” will remove any static on your lines and prevent it from collecting as often. I live where it is very dry and static electricity messes with my Ethernet cable EVERYTIME I vacuum and I have to move the cord and sometimes spray it afterwards due to intermittent connectivity.
 
-3. If you insist on using wireless connectivity, make sure you are getting decent signal strength from your connection or purchase proper equipment like a repeater to extend the length of your wireless routers reach to the far side of your home. If the router and Boxee Box are in the same room in a home and the room is no bigger that 12 x 12, ONLY USE A WIRED CONNECTION OR MOVE THE LOCATION OF EITHER THE ROUTER OR BOXEE BOX. My personal work experience from troubleshooting connectivity has been anyone in the same small room as the router ALWAYS has some sort of connectivity issues, probably because the proximity of the devices are so close, they should be using Bluetooth low frequency transmissions as opposed to high frequency router transmissions.
+*3.* If you insist on using wireless connectivity, make sure you are getting decent signal strength from your connection or purchase proper equipment like a repeater to extend the length of your wireless routers reach to the far side of your home. If the router and Boxee Box are in the same room in a home and the room is no bigger that 12 x 12, ONLY USE A WIRED CONNECTION OR MOVE THE LOCATION OF EITHER THE ROUTER OR BOXEE BOX. My personal work experience from troubleshooting connectivity has been anyone in the same small room as the router ALWAYS has some sort of connectivity issues, probably because the proximity of the devices are so close, they should be using Bluetooth low frequency transmissions as opposed to high frequency router transmissions.
 
 At this point, if you are still having buffering issues, then the problem is not with your setup, but with the connectivity between your internet connection and the hosting server feeding you video or media. Many things can cause files to not buffer adequately in these circumstances… you should know this is out of your control and there is NOTHING YOU CAN DO ABOUT IT. Short of paying for more bandwidth to your favorite video hosting site or going rogue and install fiber optic for a site and remove their bandwidth caps they put on their servers without their permissions, there is nothing you can do about this. Some video servers put bandwidth limitations on their sites intentionally so they can give everyone SOME kind of access to their services, typically shitty service. It could also be that the server you are trying to stream from is actually located on the other side of the world and the transmission route is soooo long that it’s ridiculous to try and stream from it. For those not based in the U.S., if you stream from a video host located within your own country, this would be helpful because it’s a lot shorter of a distance for data to travel. We are always looking for more hosts located around the world that can help us all accommodate all users but currently, most folks are streaming from sources located in the U.S… so if you are located in Central Asia or Australia, streaming can be a real pain in the ass, especially if you are in a remote location or non-fiber optic enabled area.
 
