--- a/wiki/What_is_a_media_link_or_media_item.wiki
+++ b/wiki/What_is_a_media_link_or_media_item.wiki
@@ -1,4 +1,4 @@
 #labels Phase-Support
-Issue: What is a media link or media item?
+*Issue:* What is a media link or media item?
 
-Explanation: This refers to any URL link to a file that is video, audio, image, podcasts, text documents, or html document (Boxee only) that can be located on the internet and is openly available for download.
+*Explanation:* This refers to any URL link to a file that is video, audio, image, podcasts, text documents, or html document (Boxee only) that can be located on the internet and is openly available for download.
