--- a/wiki/What_version_of_Navi_X_or_media_center_software_do_I_need.wiki
+++ b/wiki/What_version_of_Navi_X_or_media_center_software_do_I_need.wiki
@@ -1,10 +1,10 @@
 #labels Phase-Support
-Issue: What version of Navi-X or media center software do I need?
+*Issue:* What version of Navi-X or media center software do I need?
 
-Explanation: Every time Navi-X or media center software releases a new version, new improvements and changes are implemented in each release. This means also that this possibly brings compatibility issues with every update. Make sure you use the latest version of Navi-X available. Most likely the latest version version of Navi-X is compatible with the latest "stable" software available of your media center software, but may not be for XBMC nightly releases.
+*Explanation:* Every time Navi-X or media center software releases a new version, new improvements and changes are implemented in each release. This means also that this possibly brings compatibility issues with every update. Make sure you use the latest version of Navi-X available. Most likely the latest version version of Navi-X is compatible with the latest "stable" software available of your media center software, but may not be for XBMC nightly releases.
 
 
-XBMC Compatibility
+*XBMC Compatibility*
 
 Navi-X 3.5 and below = compatible with XBMC 9.11 and earlier versions.
 
@@ -13,6 +13,6 @@ Navi-X 3.6 and up to 3.7.4 = compatible with XBMC 10.1
 Navi-X 3.7.4 and above = compatible with XBMC 10.1 and XBMC 11 Eden.
 
 
-Boxee Compatibility
+*Boxee Compatibility*
 
 Navi-X 1.4 and up = compatible with Boxee 0.9 and 1.5
