--- a/wiki/Where_does_Navi_X_install_to_on_my_harddrive.wiki
+++ b/wiki/Where_does_Navi_X_install_to_on_my_harddrive.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: Where does Navi-X install to on my harddrive?
+*Issue:* Where does Navi-X install to on my harddrive?
 
-Explanation: Navi-X installations can be found typically in the following locations on your platform:
+*Explanation:* Navi-X installations can be found typically in the following locations on your platform:
 
 AppleTV 1 and 2, iPad and iPhone 4:
 /private/var/mobile/Library/Preferences/XBMC/addons/Navi-X
