Edited wiki page Why_am_I_not_seeing_a_link_in_Navi_X_that_was_there_before through web user interface.

--- a/wiki/Why_am_I_not_seeing_a_link_in_Navi_X_that_was_there_before.wiki
+++ b/wiki/Why_am_I_not_seeing_a_link_in_Navi_X_that_was_there_before.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: Why am I not seeing a link in Navi-X that was there before?
+*Issue:* Why am I not seeing a link in Navi-X that was there before?
 
-Explanation: There are several reasons a link would be in Navi-X and then disappear from a list.
+*Explanation:* There are several reasons a link would be in Navi-X and then disappear from a list.
 
 1. The file is no longer available online because it was taken down for copyright infringement. There is nothing you can do to fix this issue. The content was taken offline for violating copyright law. 
 
