--- a/wiki/Why_did_my_video_stream_stop_completely_while_playing.wiki
+++ b/wiki/Why_did_my_video_stream_stop_completely_while_playing.wiki
@@ -1,7 +1,7 @@
 #labels Phase-Support
-Issue: Why did my video stream stop completely while playing?
+*Issue:* Why did my video stream stop completely while playing?
 
-Explanation: There are several reasons a video would stop in the middle of playing.
+*Explanation:* There are several reasons a video would stop in the middle of playing.
 
 1. The file host you are streaming from is being over used and does not have adequate bandwidth to tranfer the file to you.
 2. You were somehow disconnected from your internet connection, which caused the stream to drop.
